# Liminal

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  imgui.ini
headers/: imGuiSetup.h  window.h
lightbulb/: Light bulb High Poly.mtl
shaders/: chromatic_abberation.frag  grayscale.frag  screen_quad.vert  shader.frag  shader.vert
src/: main.cpp
src/liminal/: camera.h  cube.cpp  cube.h  filesystem.h  imGuiSetup.cpp  liminal.cpp  liminal.h  mesh.h  model.cpp  model.h  openGLObjects.cpp  openGLObjects.h  postProcessing.h  shader.cpp  shader.h  texture.cpp  texture.h  world.h
